plugins {
    id 'java'
    id 'java-library'
    /*id 'application'*/
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'

    group = 'org.oreon'

    java {
        sourceCompatibility = '17'
    }

    repositories {
        mavenCentral()
        maven {
            url 'https://oss.sonatype.org/content/repositories/snapshots'
        }
    }

    ext.lwjglVersion = '3.3.4'
    //ext.lwjglVersion = '3.1.7-SNAPSHOT'
    ext.lwjglNatives = ''

    ext.log4jVersion = '2.23.1'
    ext.lombokVersion = '1.18.34'

    if (System.properties['os.name'].toLowerCase().contains('windows')) {
        lwjglNatives = 'natives-windows'
    } else if (System.properties['os.name'].toLowerCase().contains('mac')) {
        lwjglNatives = 'natives-macos'
    } else if (System.properties['os.name'].toLowerCase().contains('linux')) {
        lwjglNatives = 'natives-linux'
    }

    dependencies {
        implementation platform("org.lwjgl:lwjgl-bom:${lwjglVersion}")

        /*implementation "org.lwjgl:lwjgl:${lwjglVersion}"
        implementation "org.lwjgl:lwjgl-assimp:${lwjglVersion}"
        implementation "org.lwjgl:lwjgl-glfw:${lwjglVersion}"
        implementation "org.lwjgl:lwjgl-jemalloc:${lwjglVersion}"
        implementation "org.lwjgl:lwjgl-openal:${lwjglVersion}"
        implementation "org.lwjgl:lwjgl-opengl:${lwjglVersion}"
        implementation "org.lwjgl:lwjgl-vulkan:${lwjglVersion}"
        implementation "org.lwjgl:lwjgl-stb:${lwjglVersion}"*/
    }
}